# lyrebird

./: CMakeLists.txt  LICENSE  Makefile  README  README.rst
cmake/: FindGLFW.cmake  FindSkunkworks.cmake  FindSpt3g.cmake
contrib/AntTweakBar/: Readme.txt
python_scripts/: aviary.py  config_constructor.py  config_constructor_dash.py  dfmux_config_constructor.py  kookaburra.py  old_dfmux_constructor.py  scatterplot.py  view_spt_idfs.py
src/: CMakeLists.txt  Makefile  cameracontrol.cpp  cameracontrol.h  configparsing.cpp  configparsing.h  datastreamer.cpp  datastreamer.h  datavals.cpp  datavals.h  dfmuxstreamer.cpp  dfmuxstreamer.h  equation.cpp  equation.h  equationmap.cpp  equationmap.h  functionlib.cpp  functionlib.h  genericutils.cpp  genericutils.h  geometryutils.cpp  geometryutils.h  hdfstreamer.cpp  hdfstreamer.h  highlighter.cpp  highlighter.h  jsoncpp.cpp  logging.cpp  logging.h  main.cpp  nanosvg.cpp  nanosvg.h  numberlineart.cpp  numberlineart.h  plotbundler.cpp  plotbundler.h  plotter.cpp  plotter.h  polish_prefix_parser.cpp  polygon.cpp  (+12 more)
src/AntTweakBar/: CMakeLists.txt  Readme.txt
src/AntTweakBar/src/: Makefile  MiniGLFW3.h  TwColors.cpp  TwEventGLFW.c  TwPrecomp.h
src/glm/: CTestTestfile.cmake  cmake_install.cmake
